--- a/src/blocks/portfolio/portfolio.scss
+++ b/src/blocks/portfolio/portfolio.scss
@@ -15,9 +15,19 @@
   width: 25%;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 920px) {
   .grid-item {
     width: 25%;
+  }
+
+  .main--navigation-opened .grid-item {
+    width: 50%;
+  }
+}
+
+@media (max-width: 768px) {
+  .grid-item {
+    width: 50%;
   }
 
   .main--navigation-opened .grid-item {
